# prefigure

./: .gitignore  LSP_PLAN.md  Prefigure_Example.ipynb  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  Dockerfile-ubuntu  devcontainer-lock.json  devcontainer-ubuntu.json  devcontainer.json  postCreateCommand.sh
.github/workflows/: build-and-deploy.yml  deploy-nightly.yml  release.yml  snapshot-cleanup.yml  snapshot-comment.yml  snapshot-report.yml  tests.yml
js/: update-sre
prefig/: __init__.py  cli.py  engine.py  parse.py  prefig.py
prefig/core/: CTM.py  __init__.py  annotations.py  area.py  arrow.py  axes.py  calculus.py  circle.py  circuit.py  clip.py  coordinates.py  definition.py  diagram.py  diffeqs.py  graph.py  grid_axes.py  group.py  image.py  implicit.py  label.py  label_tools.py  legend.py  line.py  math_utilities.py  network.py  parametric_curve.py  parse.py  path.py  point.py  polygon.py  read.py  rectangle.py  repeat.py  riemann_sum.py  shape.py  slope_field.py  statistics.py  tags.py  tangent_line.py  user_namespace.py  (+2 more)
prefig/scripts/: __init__.py  copy_examples.py  install_fonts.py  install_mj.py  prefig_init.py
prefigure/: CTM.py  __init__.py  annotations.py  area.py  arrow.py  calculus.py  circle.py  clip.py  coordinates.py  definition.py  diagram.py  diffeqs.py  graph.py  grid_axes.py  group.py  implicit.py  label.py  line.py  math_utilities.py  network.py  parametric_curve.py  parse.py  point.py  polygon.py  rectangle.py  repeat.py  riemann_sum.py  slope_field.py  tags.py  tangent_line.py  user_namespace.py  utilities.py  vector.py
prefigure/core/: __init__.py  annotations.py  arrow.py  circle.py  coordinates.py  definition.py  diffeqs.py  graph.py  grid_axes.py  label.py  line.py  network.py  parametric_curve.py  polygon.py  tags.py  user_namespace.py  utilities.py  vector.py
samples/: diffeqs.xml  implicit.xml  network.xml  projection.xml  riemann.xml  roots_of_unity.xml  tangent.xml
schema/: pf_schema.rng
scripts/: prep_nightly.py
tests/: KNOWN_UNRESOLVED.yml  README.md  conftest.py  test_examples_without_snapshots.py  test_expressions.py  test_guide_figures.py  test_prefigure.py  test_pretext_svg11.py  test_snapshots.py
tests/_harness/: build_helper.py
tests/helpers/: __init__.py  build_helper.py  compare.py  expr.py  generate_snapshots.py  snapshot_report.py
tests/snapshots/: manifest.json
tmp_test_outputs/: README.md
website/: package-lock.json  package.json
(+181 files in other folders)
