[tool.poetry]
name = "prefig"
version = "0.1.8"
description = "An authoring system for mathematical diagrams"
authors = ["David Austin <david.austin.m@gmail.com>"]
license = "GPL"

include = ["resources"]

[tool.poetry.dependencies]
python = ">=3.10"
lxml = ">=5.3.0"
numpy = ">=2.1.0"
networkx = ">=3.3"
pycairo = ">=1.26.1"
scipy = ">=1.14.1"
click = "^8.1.7"
psutil = "^6.0.0"

[tool.poetry.scripts]
prefig = "prefig.cli:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
