[tool.poetry]
name = "prefig"
version = "0.2.3"
description = "An authoring system for mathematical diagrams"
readme = "README.md"
homepage = "https://prefigure.org"
repository = "https://github.com/davidaustinm/prefigure"
authors = ["David Austin <david.austin.m@gmail.com>"]
license = "GPL-3.0-or-later"

include = ["resources"]

[tool.poetry.dependencies]
python = ">=3.10"
lxml = ">=5.3.0"
numpy = ">=2.1.0"
networkx = ">=3.3"
pycairo = ">=1.26.1"
scipy = ">=1.14.1"
click = "^8.1.7"
psutil = "^6.0.0"
shapely = "^2.0.6"

[tool.poetry.scripts]
prefig = "prefig.cli:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
